--- a/Deysi/ejercicioDeysi.css
+++ b/Deysi/ejercicioDeysi.css
@@ -8,7 +8,8 @@
     --color-body:#DDD;
     --color-texto:#1c1c1c;
     --color-head:#FFF;
-
+    --btn-example:#fff;
+    --btn-exHover:#e41212;
 }
 /*__________________________-*/
 body{
@@ -59,4 +60,23 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    position: relative;
+}
+/*Boton Ejemplo*/
+.btn-example{
+    background: var(--btn-example);
+    border: none;
+    padding:10px 20px;
+    transform: rotate(0deg);
+    scale: 1;
+    transition: .3s ease;
+    border-radius: 3px;
+    
+}
+.btn-example:hover{
+    transform: rotate(-10deg);
+    scale: 1.5;
+    border-radius: 0px 5px 0px 5px;
+    background: var(--btn-exHover);
+    color: #fff;
 }
