--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body.Dark .bx-sun{
 body.Dark .bx-moon{
     opacity: 0;
 }
+body.Dark .btn4:hover .nameBtn{
+    color: #1c1c1c;
+}
+body.Dark .btn4:hover i{
+    color: #1c1c1c;
+}
 /*______________*/
 .title-icon{
     background: var(--header-color);
@@ -151,6 +157,23 @@ a:hover .nameBtn{
 .btn3:hover::after{
     left: 0;
 }
+.btn4::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #26e0b1;
+    top: 0;
+    left: -100%;
+    z-index: -1;
+    transition: .29s ease-out;
+    border-radius: 10px;
+}
+.btn4:hover::after{
+    left: 0;
+    
+}
+
 .exersice-css a:hover{
     filter: drop-shadow(0px  0px 2px  var(--dr-shadow)) ;
 
